--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <html lang="en"> 
 <head>
-  <title>2015 NCAA Tournament Bracket</title>
-  <meta name="description" content="2015 NCAA Tournament Men's Basketball Bracket" />
+  <title>2016 NCAA Basketball Championship Tournament Bracket</title>
+  <meta name="description" content="2016 NCAA Tournament Men's March Madness Basketball Bracket" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8" />
   <meta http-equiv="Content-Language" content="en" />
@@ -16,7 +16,7 @@
 
 <body>
   <div id="thetitle">
-    <p>2015 NCAA<br /> Tournament Bracket</p>
+    <p>2016 NCAA<br /> Tournament Bracket</p>
     <p id="printbtn">Print Bracket</p>
   </div>
 
